<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.fxn.fragments.SampleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/title_sample"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/primary"
            android:padding="12dp"
            android:text="@string/primary"
            android:textColor="#004085" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/success"
            android:padding="12dp"
            android:text="@string/success"
            android:textColor="#155724" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/secondary"
            android:padding="12dp"
            android:text="@string/secondary"
            android:textColor="#383d41" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/danger"
            android:padding="12dp"
            android:text="@string/danger"
            android:textColor="#721c24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/warning"
            android:padding="12dp"
            android:text="@string/warning"
            android:textColor="#856404" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/info"
            android:padding="12dp"
            android:text="@string/info"
            android:textColor="#0c5460" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/light"
            android:padding="12dp"
            android:text="@string/light"
            android:textColor="#818182" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dark"
            android:padding="12dp"
            android:text="@string/dark"
            android:textColor="#1b1e21" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
